fix background for popup in dark mode

--- a/Extension/src/pages/popup/components/Main/main.pcss
+++ b/Extension/src/pages/popup/components/Main/main.pcss
@@ -230,4 +230,12 @@
     .main {
         color: var(--gray300);
     }
+
+    .main--enabled,
+    .main--unavailable,
+    .main--in-exception,
+    .stats-chart {
+        background-color: var(--black);
+        background-image: none;
+    }
 }
